kyverno/10-require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: containers-must-have-requests-limits
    match:
      any:
      - resources:
          kinds: ["Pod","Deployment","StatefulSet","DaemonSet","Job","CronJob"]
    validate:
      message: "containers must define cpu/memory requests & limits"
      pattern:
        spec:
          containers:
          - name: "*"
            resources:
              requests:
                memory: "?*"
                cpu: "?*"
              limits:
                memory: "?*"
                cpu: "?*"
