kyverno/restrict-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged-off
      match:
        resources:
          kinds: ["Pod"]
      validate:
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): false
